# upgraded_spork

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  bootstrap.sh  poetry.toml  pyproject.toml
.github/workflows/: bump.yml  ci.yml
ansible/: Makefile  ansible.cfg
ansible/inventory/: inventory_builder.py  terraform_inventory.sh
ansible/inventory/group_vars/all/: admin_service.yml  authentik.yml  map_service.yml  monitoring.yml  onboarding_service.yml  payment_service.yml  traefik.yml
ansible/playbooks/: swarm.yml
ansible/roles/admin_service/tasks/: main.yml
ansible/roles/admin_service/templates/: admin_service_stack.yml.j2
ansible/roles/authentik/tasks/: main.yml
ansible/roles/authentik/templates/: authentik_stack.yml.j2
ansible/roles/database_ha/tasks/: main.yml
ansible/roles/database_ha/templates/: database_stack.yml.j2  enabled_plugins.j2  rabbitmq.conf.j2
ansible/roles/docker/tasks/: main.yml
ansible/roles/map_service/files/: setup_map_data.sh
ansible/roles/map_service/handlers/: main.yml
ansible/roles/map_service/tasks/: main.yml
ansible/roles/map_service/templates/: map_service_stack.yml.j2
ansible/roles/monitoring/files/dashboards/: security-overview.json
ansible/roles/monitoring/tasks/: main.yml  standalone.yml
ansible/roles/monitoring/templates/: alert_rules.yml.j2  alertmanager.yml.j2  grafana_datasources.yml.j2  grafana_provisioning.yml.j2  loki.yml.j2  monitoring_stack.yml.j2  prometheus.yml.j2  promtail.yml.j2  promtail_standalone.yml.j2
ansible/roles/onboarding_service/tasks/: main.yml
ansible/roles/onboarding_service/templates/: onboarding_service_stack.yml.j2
ansible/roles/payment_service/tasks/: main.yml
ansible/roles/payment_service/templates/: payment_service_stack.yml.j2
ansible/roles/traefik/tasks/: main.yml
ansible/roles/traefik/templates/: traefik_dynamic.yml.j2  traefik_stack.yml.j2  traefik_static.yml.j2
ansible/scripts/: generate_authentik_secrets.sh
docs/: database_operations.md  onboarding_service_api.md  payment_service_api.md  user_flows.md
ride_base/: __init__.py
ride_base/admin_service/: Makefile  README.md  pyproject.toml
ride_base/admin_service/app/: __init__.py  config.py  logging_config.py  main.py
ride_base/admin_service/app/api/: endpoints.py
ride_base/admin_service/app/models/: vehicle.py
ride_base/admin_service/app/services/: rabbitmq.py
ride_base/admin_service/migrations/: env.py
ride_base/onboarding_service/: .dockerignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
ride_base/onboarding_service/app/: __init__.py  config.py  logging_config.py  main.py
ride_base/onboarding_service/app/api/: endpoints.py
ride_base/onboarding_service/app/consumers/: authentik_sync.py
ride_base/onboarding_service/app/db/: database.py
ride_base/onboarding_service/app/middleware/: auth.py
ride_base/onboarding_service/app/models/: profile.py  vehicle.py
ride_base/onboarding_service/app/services/: authentik.py  otp.py  rabbitmq.py  s3.py
ride_base/onboarding_service/migrations/: env.py
ride_base/onboarding_service/migrations/versions/: 105bc75c0073_initial_onboarding_schema.py  3ff1a1478578_add_car_colour_and_national_id_photo.py  46d3fa506d9c_add_car_colour_and_national_id_photo.py  83e89a5c7e8c_initial_onboarding_schema.py  a1b2c3d4e5f6_add_email_and_email_verified.py  b3c4d5e6f7g8_add_onboarding_consent_flags.py  bd1ea0650536_add_car_colour_and_national_id_photo.py  c4d5e6f7g8h9_convert_role_enum_to_dual_assignment.py  d5e6f7g8h9i0_add_onboarding_timestamps.py  f6d78216210b_drop_is_available_now.py
ride_base/payment_service/: CHANGELOG.md  Dockerfile  Makefile  pyproject.toml
ride_base/payment_service/app/: __init__.py  config.py  logging_config.py  main.py
ride_base/payment_service/app/api/: subscriptions.py  webhooks.py
ride_base/payment_service/app/consumers/: authentik_sync.py  db_tracker.py  email_notifier.py
ride_base/payment_service/app/middleware/: auth.py
ride_base/payment_service/app/models/: schemas.py
ride_base/payment_service/app/services/: authentik.py  rabbitmq.py  stripe.py
ride_base/ride_service/: Dockerfile  Makefile  alembic.ini  pyproject.toml
ride_base/ride_service/app/: __init__.py  config.py  logging_config.py  main.py
ride_base/ride_service/app/api/: driver.py  reporting.py  rider.py  rides.py
ride_base/ride_service/app/consumers/: location_sync.py
ride_base/ride_service/app/db/: database.py
ride_base/ride_service/app/middleware/: auth.py
ride_base/ride_service/app/models/: ride.py  schemas.py
ride_base/ride_service/app/services/: rabbitmq.py  redis_service.py  ride_service.py
ride_base/ride_service/app/websocket/: manager.py  ws.py
ride_base/ride_service/migrations/: env.py
ride_base/ride_service/migrations/versions/: a1b2c3d4e5f6_initial_ride_schema.py
ridebase_app/: README.md  pubspec.yaml
ridebase_app/android/app/: build.gradle.kts
ridebase_app/android/app/src/main/: AndroidManifest.xml
ridebase_app/assets/styles/: ridebase_style.json
ridebase_app/ios/Runner/: Info.plist
ridebase_app/ios/Runner.xcodeproj/: project.pbxproj
ridebase_app/lib/: app.dart  main.dart
ridebase_app/lib/core/: config.dart  secrets.dart.template  theme.dart
ridebase_app/lib/core/models/: user_model.dart
ridebase_app/lib/core/providers/: auth_provider.dart
ridebase_app/lib/core/services/: auth_service.dart  tile_service.dart  token_storage.dart
ridebase_app/lib/features/drawer/: app_drawer.dart
ridebase_app/lib/features/map/: map_screen.dart
ridebase_app/lib/features/search/: search_screen.dart
ridebase_app/test/: widget_test.dart
scripts/: generate_ssh_keys.sh  validate_commit_scope.sh
terraform/: .env.template  .terraform.lock.hcl  Makefile  authentik.tf  certificates.tf  main.tf  outputs.tf  variables.tf  versions.tf
terraform/scripts/: node_init.sh  verify_hardening.sh  verify_security.sh
terraform_authentik/: .terraform.lock.hcl  Makefile  authentik.tf  variables.tf  versions.tf
upgraded_spork/: __init__.py
(+20 files in other folders)
