[tool.poetry]
name = "ridebase-onboarding-service"
version = "0.1.0"
description = "Onboarding Service for RideBase"
authors = ["Farai Wande <faraiwande@ridebase.tech>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115.3,<0.116.0"
uvicorn = {extras = ["standard"], version = ">=0.33.0,<0.34.0"}
sqlalchemy = ">=2.0.36,<3.0.0"
asyncpg = ">=0.31.0,<0.32.0"
alembic = ">=1.15.0,<2.0.0"
aioboto3 = ">=15.5.0,<16.0.0"
python-multipart = ">=0.0.19,<0.0.20"
python-jose = {extras = ["cryptography"], version = ">=3.3.0,<4.0.0"}
httpx = ">=0.28.1,<0.29.0"
pydantic-settings = ">=2.7.1,<3.0.0"
aio-pika = ">=9.6.2,<10.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
