[tool.poetry]
name = "ridebase_payment_service"
version = "0.2.0"
description = "Subscription and Payment Service for RideBase"
authors = ["Farai Wande <faraiwande@ridebase.tech>"]
license = "MIT"
readme = "README.md"
keywords = ["fastapi", "microservice", "rabbitmq", "payment"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
httpx = "^0.25.0"
aio-pika = "^9.4.0"
pydantic-settings = "^2.0.3"
pydantic = "^2.0.0"
stripe = "^15.0.1"

[tool.poetry.group.dev.dependencies]
commitizen = "^4.8.3"
pre-commit = "^4.5.1"

[tool.commitizen]
name = "cz_customize"
# Use a specific tag format for this service in the monorepo
tag_format = "payment_service-v$version"
version_scheme = "semver2"
version = "0.2.0"
version_files = [
    "pyproject.toml:version",
    "app/__init__.py:__version__"
]
update_changelog_on_bump = true
# Ensure changelog is specific to this service
changelog_file = "CHANGELOG.md"

[tool.commitizen.customize]
schema_pattern = "^(build|bump|docs|feat|fix|refactor|chore|test|style|perf|ci)\\(payment\\):\\s.*"
changelog_pattern = "^(build|docs|feat|fix|refactor|chore|test|style|perf|ci)\\(payment\\):\\s.*"
commit_parser = "^(?P<change_type>build|bump|docs|feat|fix|refactor|chore|test|style|perf|ci)\\(payment\\):\\s(?P<message>.*)?"
change_type_order = ["feat", "fix", "perf", "build", "refactor", "test", "style", "chore", "docs", "ci"]

[tool.commitizen.customize.bump_map]
feat = "MINOR"
fix = "PATCH"
perf = "PATCH"
build = "PATCH"
docs = "PATCH"
refactor = "PATCH"
test = "PATCH"
style = "PATCH"
chore = "PATCH"
ci = "PATCH"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
